refactor: replace usages of IOUtils with Java NIO API (#4657)